carrer apply blue block spacing issues

--- a/blocks/career-apply/career-apply.css
+++ b/blocks/career-apply/career-apply.css
@@ -26,7 +26,7 @@
 
 .career-apply p {
     line-height: 24px;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0;
 }
 
 .career-apply.inverted p {
@@ -70,15 +70,17 @@
         max-width: 45rem;
         text-align: center;
         padding-top: 5rem;
+        padding-bottom: 5rem;
         margin-bottom: 5rem;
     }
 
     .career-apply h2 {
+        margin-top: 0;
         font-size: var(--heading-font-size-mxl);
     }
 
     .career-apply p {
-        margin-bottom: 3.125rem;
+        margin-bottom: 0;
     }
 
     .career-apply .button-container {
